--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <p><br><br></p>    
 <div class="zhengti">
     <div class="juzuo1">
-        V24050026 ( Jun Vu )
+        V24050026 ( Vũ Đức Quý )
     </div>
 
     <div class="saomatishi juzhong" id="biaoti">
