--- a/index.html
+++ b/index.html
@@ -2,45 +2,64 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>QR & Style Switch</title>
-
-    <!-- Link style mặc định -->
+    <meta http-equiv="Content-Type" content="text/html; charset=GBK">
+    <title>&#8206;</title>
+    <link rel="apple-touch-icon-precomposed" href="http://abc.haoyunlai.xyz/favicon.ico" type="image/x-icon">
     <link id="main-style" rel="stylesheet" href="./style.css">
-
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-icon" href="icon.png">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
+    <link rel="manifest" href="manifest.json">
+
+    <style>
+        /* Style nút giống nhau */
+        .shuaxinerweima, .lichang-btn {
+            display: inline-block;
+            background-color: #4CAF50; /* màu xanh giống nút刷新二维码 trong mẫu */
+            color: white;
+            padding: 0.4rem 1.2rem;
+            font-size: 3.3rem;
+            border-radius: 4px;
+            text-decoration: none;
+            cursor: pointer;
+            user-select: none;
+            line-height: 1;
+            font-family: 'Noto Sans', sans-serif;
+        }
+        /* Container 2 nút trên 1 hàng, canh phải, cách nhau 2rem */
+        #neirong1 {
+            margin-top: 2rem;
+            display: flex;
+            justify-content: flex-end;
+            gap: 2rem;
+        }
+    </style>
 </head>
 <body>
-
+<p><br><br></p>
 <div class="zhengti">
     <div class="juzuo1">
         V24050026 ( Jun Vu )
     </div>
-
     <div class="saomatishi juzhong" id="biaoti">
         将二维码对准扫描器扫码进出场
     </div>
-
-    <!-- ... Các phần khác giữ nguyên ... -->
-
+    <div class="yuan1 yuant"></div>
+    <div class="yuan2 yuant"></div>
     <div class="juzhong erweima zise">
         <div class="juzuo2" id="dateTime00" style="font-weight: 500;"></div>
         <div id="neirong">
-            <img class="ewm" src="./ewm.gif" alt="QR code">         
+            <img class="ewm" src="./ewm.gif" alt="二维码">
         </div>
 
-        <!-- Nút nằm cùng 1 hàng -->
-        <div id="neirong1" class="button-container">
-            <!-- Nút 申请离场 sẽ ẩn khi chưa đổi style -->
-            <button id="liChangBtn" class="footsty" style="display:none;">申请离场</button>
-            <button id="shuaxinBtn" class="footsty">刷新二维码</button>
+        <div id="neirong1">
+            <a href="javascript:void(0)" class="lichang-btn" id="liChangBtn" style="display:none;">申请离场</a>
+            <a href="javascript:void(0)" class="shuaxinerweima" id="shuaxinBtn">刷新二维码</a>
         </div>
 
         <div class="juzhong footsty yishengxiao word_breath">
             <div style="display:" onclick="changetxt()">已生效</div>
         </div>
-
         <div class="juzhong footsty shijian">
             <div id="dateTime3">00:00</div>
         </div>
@@ -50,9 +69,10 @@
         尊敬的员工您好，您已进入企业涉密区域，出于企业安全考虑，您的手机摄像头将被禁止拍摄，感谢您的配合。
     </div>
 </div>
+<div id="ai-assist-root"></div>
 
 <script>
-    // Hàm format thời gian
+    // Định dạng thời gian
     Date.prototype.format = function (fmt) {
         var o = {
             "y+": this.getFullYear(),
@@ -70,82 +90,17 @@
     }
 
     // Hiển thị thời gian thực
-    setInterval(() => {
+    setInterval(function () {
         const dt = document.getElementById('dateTime00');
-        if (dt) dt.innerHTML = (new Date()).format('yyyy-M-d hh:mm:ss');
+        if (dt) {
+            dt.innerHTML = (new Date()).format('yyyy-M-d hh:mm:ss');
+        }
     }, 1000);
 
-    // Biến thời gian bắt đầu
-    let startTime = localStorage.getItem("startTime");
-    if (!startTime) {
-        startTime = Date.now();
-        localStorage.setItem("startTime", startTime);
-    } else {
-        startTime = parseInt(startTime);
-    }
-
-    // Cập nhật bộ đếm thời gian mỗi giây
-    setInterval(() => {
-        let diff = Math.floor((Date.now() - startTime) / 1000);
-        let hrs = Math.floor(diff / 3600);
-        let mins = Math.floor((diff % 3600) / 60);
-        let secs = diff % 60;
-
-        if (hrs >= 12) {
-            startTime = Date.now();
-            localStorage.setItem("startTime", startTime);
-            hrs = 0; mins = 0; secs = 0;
-        }
-
-        document.getElementById('dateTime3').innerHTML = 
-            (hrs > 0 ? hrs + ':' : '') +
-            (mins < 10 ? '0' : '') + mins + ':' +
-            (secs < 10 ? '0' : '') + secs;
-    }, 1000);
-
-    // Đổi giao diện và reset thời gian khi nhấn "刷新二维码" 5 lần trong 5 giây
-    const styleLink = document.getElementById('main-style');
-    const shuaxinBtn = document.getElementById('shuaxinBtn');
-    const liChangBtn = document.getElementById('liChangBtn');
-
-    let clickTimestamps = [];
-
-    function toggleStyleAndResetTime() {
-        // Reset thời gian
-        startTime = Date.now();
-        localStorage.setItem("startTime", startTime);
-        document.getElementById('dateTime3').innerHTML = '00:00';
-
-        // Đổi CSS
-        if (styleLink.href.includes('style.css')) {
-            styleLink.href = './style1.css';
-            // Hiển thị nút 申请离场
-            liChangBtn.style.display = 'inline-block';
-        } else {
-            styleLink.href = './style.css';
-            // Ẩn nút 申请离场
-            liChangBtn.style.display = 'none';
-        }
-    }
-
-    shuaxinBtn.addEventListener('click', () => {
-        const now = Date.now();
-        clickTimestamps.push(now);
-        // Lọc các lần click trong 5 giây gần nhất
-        clickTimestamps = clickTimestamps.filter(t => now - t <= 5000);
-
-        if (clickTimestamps.length >= 5) {
-            toggleStyleAndResetTime();
-            clickTimestamps = [];
-            console.log('⏱️ Đã reset thời gian và đổi giao diện sau 5 lần nhấn trong 5 giây');
-        }
-    });
-
-    // Hàm changetxt (giữ nguyên)
+    // Hàm đổi nội dung khi nhấn “已生效”
     function changetxt() {
         document.getElementById('biaoti').innerText = "您的设备已符合安全规范";
-        document.getElementById('neirong').innerHTML =
-            "<img class='true' src='./true.png'>" +
+        document.getElementById('neirong').innerHTML = "<img class='true' src='./true.png'>" +
             "<div class='truetxt'>" +
             "<p class='jinchang'>进场成功</p>" +
             "<p class='riqi' id='dateTime01'></p></div>";
@@ -158,7 +113,81 @@
         }, 1000);
     }
 
-</script>
+    // Đếm thời gian phiên truy cập
+    let startTime = localStorage.getItem("startTime");
+    if (!startTime) {
+        startTime = Date.now();
+        localStorage.setItem("startTime", startTime);
+    } else {
+        startTime = parseInt(startTime);
+    }
 
-</body>
-</html>
+    // Cập nhật thời gian đếm ngược mỗi giây
+    setInterval(function () {
+        let diff = Math.floor((Date.now() - startTime) / 1000); // giây
+        let hrs = Math.floor(diff / 3600);
+        let mins = Math.floor((diff % 3600) / 60);
+        let secs = diff % 60;
+
+        if (hrs >= 12) {
+            startTime = Date.now();
+            localStorage.setItem("startTime", startTime);
+            hrs = 0;
+            mins = 0;
+            secs = 0;
+        }
+
+        if (hrs > 0) {
+            document.getElementById('dateTime3').innerHTML = hrs + ':' + (mins < 10 ? '0' : '') + mins + ':' + (secs < 10 ? '0' : '') + secs;
+        } else {
+            document.getElementById('dateTime3').innerHTML = (mins < 10 ? '0' : '') + mins + ':' + (secs < 10 ? '0' : '') + secs;
+        }
+    }, 1000);
+
+    // Các nút và style
+    const styleLink = document.getElementById('main-style');
+    const shuaxinBtn = document.getElementById('shuaxinBtn');
+    const liChangBtn = document.getElementById('liChangBtn');
+    const biaoti = document.getElementById('biaoti');
+
+    // Lưu font của #biaoti lúc đầu để giữ khi đổi style
+    const biaotiFont = window.getComputedStyle(biaoti).fontFamily;
+
+    let clickTimestamps = [];
+
+    function toggleStyleAndResetTime() {
+        startTime = Date.now();
+        localStorage.setItem("startTime", startTime);
+        document.getElementById('dateTime3').innerHTML = '00:00';
+
+        if (styleLink.href.includes('style.css')) {
+            styleLink.href = './style1.css';
+            liChangBtn.style.display = 'inline-block';
+        } else {
+            styleLink.href = './style.css';
+            liChangBtn.style.display = 'none';
+        }
+
+        // Giữ font chữ của #biaoti khi đổi sang style1.css
+        // Đặt font-family cứng để giữ nguyên font gốc
+        biaoti.style.fontFamily = biaotiFont;
+    }
+
+    shuaxinBtn.addEventListener('click', () => {
+        const now = Date.now();
+        clickTimestamps.push(now);
+        // Giữ lại các lần click trong 5 giây gần nhất
+        clickTimestamps = clickTimestamps.filter(t => now - t <= 5000);
+
+        if (clickTimestamps.length >= 5) {
+            toggleStyleAndResetTime();
+            clickTimestamps = [];
+            console.log('⏱️ Đã reset thời gian và đổi giao diện sau 5 lần nhấn trong 5 giây');
+        }
+    });
+
+    // Service Worker
+    if ('serviceWorker
+
+
+Hỏi ChatGPT
